fixed layout issue on small screens

--- a/client/src/components/ui/SingleDeckWrapper.module.css
+++ b/client/src/components/ui/SingleDeckWrapper.module.css
@@ -1,5 +1,6 @@
 .singleDeck {
     padding-bottom: 10rem;
+    width: 100%;
 }
 
 /* @media screen and (min-width: 1024px) {
